# discord-lab

./: Dockerfile  LICENSE  README.md  buildspec.yml  pyproject.toml
.github/workflows/: docker-publish.yml
aws/: bootstrap-cfn.yml
brainstorming/: webhookin.py
brainstorming/templates/: character-sheet.txt  map.txt
src/discord_lab/: character.py  dice.py  die_parser.py
src/discord_lab/data/: character-gen.yaml
src/discord_lab/data/tables/: ancestries.csv  basic-gear.csv  character-names.csv  dieties.csv  starting-gear-level-0.csv  weapon-properties.csv  weapons.csv
src/discord_lab/interactions/: auth.py  aws_lambda.py  env.py  lambda.py  manage.py
tests/: test_aws_lambda.py  test_lambda.py
tests/discord_lab/: test_character.py  test_dice.py
