[project]
name = "discord-lab"
version = "0.1.0"
description = "Experiments with Discord bots, APIs, etc."
authors = [
    {name = "Hans Keeler", email = "hkeeler@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    #"discord-interactions = "^0.4.0",
    "requests (>=2.32.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "pynamodb (>=6.0.1,<7.0.0)",
    "boto3 (>=1.35.68,<2.0.0)",
]


[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "discord_lab", from = "src" }]
package-mode = false

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20241230"
types-requests = "^2.32.0.20241016"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-vv",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
